# snake-python

./: README.md  characters.py  game.py  main.py  position.py  pyproject.toml  recap.py
character_types/: apple.py  blank.py  character.py  portal_wall.py  snake.py  wall.py
database/: operations.py
game_builders/: game_builder.py  with_portal_walls.py  with_regular_walls.py
ui/: curses_graphics.py  graphics.py  pygame_graphics.py  with_curses.py  with_pygame.py
ui/curses/: graphics.py  io.py
ui/pygame/: graphics.py  io.py
utilities/: board.py  position.py
